[gd_scene load_steps=2 format=3 uid="uid://b7uxqxydktg5d"]

[ext_resource type="Script" path="res://levelUpWindow.gd" id="1_utbya"]

[node name="LevelUpWindow" type="Node2D"]
script = ExtResource("1_utbya")

[node name="Window" type="Window" parent="."]
title = "Level up!"
position = Vector2i(300, 100)
visible = false

[node name="PanelContainer" type="PanelContainer" parent="Window"]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Window/PanelContainer"]
layout_mode = 2

[node name="MenuButton" type="MenuButton" parent="Window/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Preview"

[node name="Label" type="Label" parent="Window/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Window/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Window/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Window/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="Window/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Window2" type="Window" parent="."]
visible = false

[node name="PanelContainer2" type="PanelContainer" parent="Window2"]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Window2/PanelContainer2"]
layout_mode = 2

[connection signal="pressed" from="Window/PanelContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
